@@ -16,6 +16,7 @@ Version 0.4c
  - Hamstring replaced
  - Kicksand replaced
  - FocusStrike replaced
+ - Backstab replaced
 
 --------------------------------------------
              PREVIOUS VERSIONS
